--- a/dotnet/EdgeReference.Test/EdgeReference.Test.csproj
+++ b/dotnet/EdgeReference.Test/EdgeReference.Test.csproj
@@ -32,18 +32,22 @@
     <Reference Include="System" />
     <Reference Include="nunit.framework, Version=2.6.3.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
       <Private>False</Private>
-      <Package>nunit</Package>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="JavaScriptEmitterTest.cs" />
+    <Compile Include="DotNetEmitterTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\EdgeReference.csproj">
       <Project>{CACC18D3-7392-44D5-A4A0-AF3861F22A09}</Project>
       <Name>EdgeReference</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DotNetTest\DotNetTest.csproj">
+      <Project>{D16DE585-1CDA-41AD-AA91-34846EE2027C}</Project>
+      <Name>DotNetTest</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
