Edited README and added code comments.  Added multi-threading support to ReferenceManager.

--- a/dotnet/EdgeReference.csproj
+++ b/dotnet/EdgeReference.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ReflectionUtils.cs" />
     <Compile Include="DotNetEmitter.cs" />
     <Compile Include="CodeEmitter.cs" />
+    <Compile Include="ReferenceComparer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
