--- a/dotnet/EdgeGenerator.Test/EdgeGenerator.Test.csproj
+++ b/dotnet/EdgeGenerator.Test/EdgeGenerator.Test.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{CACC18D3-7392-44D5-A4A0-AF3861F22A09}</ProjectGuid>
+    <ProjectGuid>{9D2AC370-C674-4B74-8E41-E1F21575BC2D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>EdgeReference</RootNamespace>
-    <AssemblyName>EdgeReference</AssemblyName>
+    <RootNamespace>EdgeGenerator.Test</RootNamespace>
+    <AssemblyName>EdgeGenerator.Test</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,15 +30,27 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="nunit.core, Version=2.6.3.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+    <Reference Include="nunit.framework">
       <Private>False</Private>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReferenceManager.cs" />
-    <Compile Include="ReferenceComparer.cs" />
-  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Compile Include="DotNetEmitterTest.cs" />
+    <Compile Include="JavaScriptEmitterTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EdgeGenerator\EdgeGenerator.csproj">
+      <Project>{25022476-6B04-4D6A-9709-6A7455A6181D}</Project>
+      <Name>EdgeGenerator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EdgeReference.csproj">
+      <Project>{CACC18D3-7392-44D5-A4A0-AF3861F22A09}</Project>
+      <Name>EdgeReference</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DotNetTest\DotNetTest.csproj">
+      <Project>{D16DE585-1CDA-41AD-AA91-34846EE2027C}</Project>
+      <Name>DotNetTest</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
