--- a/dotnet/EdgeGenerator/EdgeGenerator.csproj
+++ b/dotnet/EdgeGenerator/EdgeGenerator.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{CACC18D3-7392-44D5-A4A0-AF3861F22A09}</ProjectGuid>
+    <ProjectGuid>{25022476-6B04-4D6A-9709-6A7455A6181D}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>EdgeReference</RootNamespace>
-    <AssemblyName>EdgeReference</AssemblyName>
+    <RootNamespace>EdgeGenerator</RootNamespace>
+    <AssemblyName>EdgeGenerator</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,15 +30,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="nunit.core, Version=2.6.3.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
-      <Private>False</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReferenceManager.cs" />
-    <Compile Include="ReferenceComparer.cs" />
+    <Compile Include="CodeEmitter.cs" />
+    <Compile Include="DotNetEmitter.cs" />
+    <Compile Include="JavaScriptEmitter.cs" />
+    <Compile Include="ProxyGenerator.cs" />
+    <Compile Include="ReflectionUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\EdgeReference.csproj">
+      <Project>{CACC18D3-7392-44D5-A4A0-AF3861F22A09}</Project>
+      <Name>EdgeReference</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
