--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
   "devDependencies": {
     "mocha": "^3.2.0"
   },
+	"files": [
+		"index.js",
+		"src/",
+		"bin/"
+	],
   "scripts": {
     "test": "npm run build && mocha && npm run test-gc",
     "test-gc": "node --expose-gc test-gc.js",
-	"build": "./edge-reference-build.sh && ./edge-generator-build.sh"
+	"build": "./edge-generator-build.sh",
+	"prestart": "npm run build",
+	"prepublish": "npm run build"
   },
   "keywords": [],
   "author": "Steven Westbrook <StevenAWestbrook@gmail.com>",
