--- a/package.json
+++ b/package.json
@@ -17,43 +17,44 @@
   "devDependencies": {
     "mocha": "^3.2.0"
   },
-	"files": [
-		"index.js",
-		"src/",
-		"script/",
-		"bin/",
-		"LICENSE",
-		"README.md"
-	],
-	"homepage": "https://github.com/SteveWestbrook/edge-generator",
+  "files": [
+    "index.js",
+    "src/",
+    "script/",
+    "bin/",
+    "LICENSE",
+    "README.md"
+  ],
+  "homepage": "https://github.com/SteveWestbrook/edge-generator",
   "repository": {
     "type": "git",
     "url": "https://github.com/SteveWestbrook/edge-generator.git"
   },
   "scripts": {
-    "test": "npm run build && mocha && npm run test-gc",
+    "test": "npm run build && mocha && npm run test-gc && npm run test-dotnet",
     "test-gc": "node --expose-gc test-gc.js",
-	"build": "node ./script/edge-generator-build.js",
-	"prestart": "npm run build",
-	"prepublish": "npm run build"
+    "test-dotnet": "cd dotnet/EdgeGenerator.Test && sh ./generator-tests.sh",
+    "build": "node ./script/edge-generator-build.js",
+    "prestart": "npm run build",
+    "prepublish": "npm run build"
   },
   "keywords": [
-		"edge",
-		"c#",
-		"net",
-		".net",
-		"mono",
-		"csharp",
-		"managed",
-		"reference",
-		"edge-reference",
-		"integration",
-		"callback",
-		"clr",
-		"proxy",
-		"generator",
-		"code"
-	],
+    "edge",
+    "c#",
+    "net",
+    ".net",
+    "mono",
+    "csharp",
+    "managed",
+    "reference",
+    "edge-reference",
+    "integration",
+    "callback",
+    "clr",
+    "proxy",
+    "generator",
+    "code"
+  ],
   "author": "Steven Westbrook <StevenAWestbrook@gmail.com>",
   "license": "MIT"
 }
